OSL Volume Blender 2.79 #53048

Closed
opened 2017-10-11 11:43:55 +02:00 by Maxime Caron · 5 comments

System Information
Windows 7 64bit - GTX960

Blender Version
Broken: 2.79 5bd8ac9
Worked: 2.78 4bb1e22

Short description of error

I'm learning to work with OSL but it seems something has changed between Blender 2.79 and previous versions regarding OSL Volumes...

A very simple osl volume shader does not work in blender 2.79 but it's working perfectly in 2.78.

Is there something I'm missing ?

Thanks in advance,

Max

Exact steps for others to reproduce the error
Use this shader :
shader node_volume(output closure color Volume = 0) { Volume = henyey_greenstein(0.0); }

**System Information** Windows 7 64bit - GTX960 **Blender Version** Broken: 2.79 5bd8ac9 Worked: 2.78 4bb1e22 **Short description of error** I'm learning to work with OSL but it seems something has changed between Blender 2.79 and previous versions regarding OSL Volumes... A very simple osl volume shader does not work in blender 2.79 but it's working perfectly in 2.78. Is there something I'm missing ? Thanks in advance, Max **Exact steps for others to reproduce the error** Use this shader : shader node_volume(output closure color Volume = 0) { Volume = henyey_greenstein(0.0); }
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MaximeCaron

Added subscriber: @MaximeCaron

This issue was referenced by blender/cycles@9698226d65

This issue was referenced by blender/cycles@9698226d65c8b2ab4f6c05d34189d715c7eaaa7e

This issue was referenced by 5ea729845d

This issue was referenced by 5ea729845d8b11ecd0d1f200fc7b23e6461b97bb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53048
No description provided.